--- a/build.config
+++ b/build.config
@@ -1,4 +1,4 @@
-email=gubznfpnzry@b2.cy
+email=suvft@rkpvgr.pbz
 branch=master
 modules=dht,ds18b20,file,gpio,http,i2c,net,node,ow,spi,tmr,uart,wifi,wifi_monitor
 ssl-enabled=false
