--- a/build.config
+++ b/build.config
@@ -1,4 +1,4 @@
-email=r_tenin@ngg.arg
+email=suvft@rkpvgr.pbz
 branch=master
 modules=dht,ds18b20,file,gpio,http,i2c,net,node,ow,pwm,spi,tmr,uart,wifi
 ssl-enabled=false
